changed forgot and signup pages ui

--- a/src/pages/ForgotPassword/ForgotPasswordPage.css
+++ b/src/pages/ForgotPassword/ForgotPasswordPage.css
@@ -54,7 +54,7 @@
   font-size: 12px;
 }
 
-.login-box form button { /* Changed from 'a' to 'button' */
+.login-box form button {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
@@ -72,13 +72,13 @@
 }
 
 .login-box button:hover {
-  background: #ffffff;
-  color: #fff;
+  background: #000000;
+  color: #ffffff;
   border-radius: 5px;
-  box-shadow: 0 0 5px #ffffff,
-              0 0 25px #ffffff,
-              0 0 50px #ffffff,
-              0 0 100px #ffffff;
+  box-shadow: 0 0 0px #ffffff,
+              0 0 0px #ffffff,
+              0 0 0px #ffffff,
+              0 0 0px #ffffff;
 }
 
 .login-box button span {
