--- a/src/pages/Login/LoginPage.css
+++ b/src/pages/Login/LoginPage.css
@@ -3,8 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 90vh;
-  background-color: #f0f2f5;
+  min-height: 100vh;
 }
 
 .form {
@@ -55,7 +54,7 @@
   width: 100%;
   height: 100%;
   flex-grow: 1;
-  background-color: transparent; /* ✨ THIS IS THE FIX ✨ */
+  background-color: transparent;
 }
 
 .input:focus {
@@ -177,14 +176,24 @@
   margin-top: 5px;
 }
 
-@media (max-width: 500px) {
-  .login-page-container {
+
+@media (max-width: 600px) {
+  .login-page-container { 
     padding: 0px;
-    min-height: 80vh;
-    background-color: #f4f4f6;
+    align-items: flex-start;
+    margin-top: 0px;
   }
+
   .form {
-    padding: 20px;
-    border-radius: 15px;
+    box-shadow: 4px 4px 12px rgba(0,0,0,0.1);
+    padding: 30px 30px;
+    height: 100vh;
+    font-size: 1.125rem;
+  }
+
+  .form-title {
+    font-size: 1.75rem;
+    margin-top: 20px;
+    margin-bottom: 40px;
   }
 }
