added Add-customer button and searchbar

--- a/src/pages/Dashboard/DashboardPage.css
+++ b/src/pages/Dashboard/DashboardPage.css
@@ -29,7 +29,7 @@
   height: 50px;
   border: 1px solid var(--border-color);
   border-radius: 20px;
-  background: var(--card-background);
+  background: #ffffff;
   box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
 }
 
@@ -41,15 +41,16 @@
   max-width: 800px;
   margin: 0 auto 2.5rem auto;
   padding: 0 1rem;
+  margin-bottom: 70px;
 }
 
 .statt-card {
   width: 190px;
   height: 80px;
-  background-color: var(--card-background);
+  background-color: #ffffff;
   border-radius: 16px;
   padding: 1.5rem 1rem;
-  box-shadow: var(--card-shadow);
+  box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
   border: 1px solid var(--border-color);
   display: flex;
   flex-direction: column;
@@ -58,7 +59,7 @@
   gap: 0.25rem;
 }
 
-.stat-label {
+.statt-label {
   width: 100%;
   text-align: center;
   display: block;
@@ -70,7 +71,7 @@
   letter-spacing: 0.5px;
 }
 
-.stat-value {
+.statt-value {
   width: 100%;
   text-align: center;
   display: block;
@@ -86,7 +87,7 @@
   font-size: 2.0rem;
   font-weight: 600;
   color: var(--text);
-  margin-top: 4rem;
+  margin-top: 0rem;
   margin-bottom: 2rem;
   font-family: "Noto Sans Telugu", sans-serif;
 }
@@ -133,7 +134,6 @@
   transform: scale(0.95);
 }
 
-/* Content inside the card */
 .customer-name {
   font-size: 1.25rem;
   font-weight: 700;
@@ -154,7 +154,6 @@
   color: #c0392b; /* A red color for due amount */
   margin-top: 0.75rem;
 }
-
 /* Responsive adjustments for smaller screens */
 @media (max-width: 600px) {
   
@@ -170,19 +169,36 @@
     height: auto;
     text-align: center;
     padding: 0.75rem 1.5rem;
-    box-shadow: var(--card-shadow);
+    box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
+    margin-bottom: 0rem;
+    border-radius: 15px;
+    background: #ffffff;
+  }
+  .tagline:hover {
+    box-shadow: 10px 10px 20px #bebebe, -10px -10px 20px #ffffff;
+    transition: scale(1.05);
+  }
+  .summary-container {
+    gap: 1rem;
+    padding: 0 0rem;
   }
   .statt-card {
-    width: 120px;
-    height: 100px;
-    padding: 0.5rem 0.75rem;
+    width: 78px;
+    height: 80px;
+    padding: 0.5rem 1rem;
+    box-shadow: 10px 10px 20px #bebebe, -10px -10px 20px #ffffff;
+    background: #ffffff;
   }
-
+  .statt-card:hover {
+    box-shadow: 8px 8px 16px #bebebe, -8px -8px 16px #ffffff;
+    transition: scale(1.05);
+  }
   .statt-label {
-    font-size: 0.75rem;
+    font-size: 0.82rem;
+    margin-bottom: 0.1rem;
   }
   .statt-value {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
   }
   .customer-cards-container {
     gap: 1rem;
