--- a/src/pages/Notes/NotesPage.css
+++ b/src/pages/Notes/NotesPage.css
@@ -43,14 +43,11 @@
   height: 50px;
   border-radius: 25px;
   z-index: 1;
-  
-  /* Vibrant gradient background */
   background: linear-gradient(45deg, #ff4081, #ffc107);
   box-shadow: 0 0 15px rgba(255, 110, 157, 0.6);
   transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
 
- 
 .liquid-switch input:checked + .switch-content .toggle-button {
   transform: translateX(100px);
   background: linear-gradient(45deg, #4473eb, #04befe);
@@ -71,6 +68,7 @@
   max-width: 500px;
   margin: 40px auto;
   padding: 30px;
+  border-radius: 40px;
   background-color: #ffffff;  
   box-shadow: 
     0 8px 20px rgba(0, 0, 0, 0.1),
