--- a/src/pages/profile/ProfilePage.css
+++ b/src/pages/profile/ProfilePage.css
@@ -9,12 +9,12 @@
   border-radius: 20px;
   box-shadow: 
     0 8px 25px rgba(0, 0, 0, 0.08);
-  margin-top: 40px;
+  margin-top: 60px;
 }
 
 .profile-container h1 {
   text-align: center;
-  margin-top: 0;
+  margin-top: 0px;
   margin-bottom: 30px;
   font-size: 1.8em;
   font-weight: 700;
@@ -78,7 +78,7 @@
   padding: 14px 20px;
   border-radius: 12px;
   border: 2px solid #d9d9d9;
-  background-color: #0e5fe2;
+  background-color: #333333;
   color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: 1.1em;
@@ -87,7 +87,7 @@
 }
 
 .profile-save-button:hover {
-  background-color: #0e5fe2; 
+  background-color: #555556; 
   transform: translateY(-2px);
 }
 
@@ -95,8 +95,9 @@
 @media (max-width: 600px) {
 
   .profile-container {
-    width: 80%;
-    padding: 30px;
+    width: 100%;
+    max-width: 300px;
+    padding: 25px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     font-size: 1.2em;
     line-height: 1.4;
